--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: 双犬科技基站
-subtitle: 懈怠乃是奴隶特权  鸢飞戾天者需永远警惕勤勉
+subtitle: 懈怠乃是奴隶特权, 意难平者需永远警惕勤勉
 description: personal blog
 keywords: GIS/map/sleep
 author: 飛鳥双犬
@@ -67,7 +67,7 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 20
 pagination_dir: page
 
 # Extensions
