index.html change.

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: 双犬科技基站
-subtitle: 懈怠乃是奴隶特权, 意难平者需永远警惕勤勉
+subtitle: 透过现象看本质, 办法总比困难多
 description: personal blog
 keywords: GIS/map/sleep
 author: 飛鳥双犬
